--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ djangorestframework==3.9.2
 idna==2.8
 lorem==0.1.1
 Markdown==3.0.1
+psycopg2==2.8.3
 pycparser==2.19
 python-magic==0.4.15
 pytz==2018.9
