--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,9 @@ django-encrypted-model-fields==0.5.8
 django-environ==0.4.5
 django-filter==2.1.0
 django-js-asset==1.2.2
--e git+https://github.com/ninapavlich/django-list-wrestler.git@6.1#egg=django_list_wrestler
+django-list-wrestler==6.2
 djangorestframework==3.9.2
+gunicorn==19.9.0
 idna==2.8
 lorem==0.1.1
 Markdown==3.0.1
