--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+attrs==19.1.0
 certifi==2018.11.29
 cffi==1.12.3
 chardet==3.0.4
@@ -19,11 +20,13 @@ lorem==0.1.1
 Markdown==3.0.1
 psycopg2==2.8.3
 pycparser==2.19
+python-dateutil==2.8.0
 python-magic==0.4.15
 pytz==2018.9
 requests==2.22.0
 six==1.12.0
 sqlparse==0.2.4
+ultimate-sitemap-parser==0.2
 Unidecode==1.0.23
 urllib3==1.25.3
 whitenoise==4.1.3
