add quick visual indicator if url is working

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asn1crypto==0.24.0
 attrs==19.1.0
+beautifulsoup4==4.7.1
 certifi==2018.11.29
 cffi==1.12.3
 chardet==3.0.4
+contractions==0.0.21
 cryptography==2.7
+cssselect==1.0.3
 Django==2.2.3
 django-ace==1.0.5
 django-autocomplete-light==3.3.2
@@ -13,21 +16,39 @@ django-encrypted-model-fields==0.5.8
 django-environ==0.4.5
 django-filter==2.1.0
 django-js-asset==1.2.2
-django-list-wrestler==6.3
+-e git+git@github.com:ninapavlich/sitecomber.git@7834d27180b0af841c79fc65020600b7f084c676#egg=django_list_wrestler
 djangorestframework==3.9.2
+feedfinder2==0.0.4
+feedparser==5.2.1
 gunicorn==19.9.0
 idna==2.8
+jieba3k==0.35.1
 lorem==0.1.1
+lxml==4.3.4
 Markdown==3.0.1
+markdown2==2.3.8
+newspaper3k==0.2.8
+nltk==3.4.4
+Pillow==6.1.0
 psycopg2==2.8.3
+pyahocorasick==1.4.0
 pycparser==2.19
+pyquery==1.4.0
+pyspellchecker==0.5.0
 python-dateutil==2.8.0
 python-magic==0.4.15
 pytz==2018.9
-sitecomber-article-tests==0.0.13
+PyYAML==5.1.1
+readtime==1.1.1
 requests==2.22.0
+requests-file==1.4.3
+-e git+git@github.com:ninapavlich/sitecomber.git@7834d27180b0af841c79fc65020600b7f084c676#egg=sitecomber_article_tests
 six==1.12.0
+soupsieve==1.9.2
 sqlparse==0.2.4
+textsearch==0.0.17
+tinysegmenter==0.3
+tldextract==2.2.1
 ultimate-sitemap-parser==0.2
 Unidecode==1.0.23
 urllib3==1.25.3
