remove unused auth fields and working on sitemap view

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
 DEBUG=True
 SECRET_KEY=REPLACE_ME_WITH_LARGE_SECRET_RANDOM_STRING
-FIELD_ENCRYPTION_KEY= Generate using 'python manage.py generate_encryption_key'
 DATABASE_URL=sqlite:///venv/sitecomber.sqlite
+WORKER_LOOP_DELAY_SECONDS=10
