--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ gunicorn==19.9.0
 idna==2.8
 lorem==0.1.1
 Markdown==3.0.1
+newrelic==5.0.2.126
 psycopg2==2.8.3
 pycparser==2.19
 python-dateutil==2.8.0
