--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "server": "webpack-dev-server --inline --progress --port 8080"
   },
   "dependencies": {
+    "@svgdotjs/svg.js": "^3.0.16",
     "autoprefixer": "^9.6.1",
     "bootstrap": "^4.3.1",
     "bootstrap-scss": "^4.3.1",
     "css-loader": "^3.1.0",
+    "d3": "^5.15.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
