--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,8 @@ pycparser==2.19
 python-dateutil==2.8.0
 python-magic==0.4.15
 pytz==2018.9
-sitecomber-article-tests==0.0.34
+sitecomber-article-tests==0.0.35
+#-e git+https://github.com/ninapavlich/sitecomber-article-tests.git#egg=sitecomber_article_tests
 requests==2.22.0
 six==1.12.0
 sqlparse==0.2.4
