--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2018.11.29
 cffi==1.12.3
 chardet==3.0.4
 cryptography==2.7
-Django==2.2.5
+Django==2.2.10
 django-ace==1.0.5
 django-autocomplete-light==3.3.2
 django-ckeditor==5.6.1
@@ -23,8 +23,8 @@ pycparser==2.19
 python-dateutil==2.8.0
 python-magic==0.4.15
 pytz==2018.9
-sitecomber-article-tests==0.0.35
-#-e git+https://github.com/ninapavlich/sitecomber-article-tests.git#egg=sitecomber_article_tests
+#sitecomber-article-tests==0.0.35
+-e git+https://github.com/ninapavlich/sitecomber-article-tests.git#egg=sitecomber_article_tests
 requests==2.22.0
 six==1.12.0
 sqlparse==0.2.4
